Switch backend to Vercel Node/TS + add transcript pipeline scaffolding
- Replace Flask backend with Vercel serverless TypeScript handlers under server/
- Generate api/ at build time for Vercel via sync-api script
- Update UI API base to same-origin /api
- Add OpenAPI endpoint + Claude Skill usage doc
- Add manifest + scripts for transcript fetching and batch verification
- Update About page copy to match new architecture

--- a/.gitignore
+++ b/.gitignore
@@ -10,12 +10,23 @@ node_modules/
 /dist
 /build
 
+# Vercel generated serverless folder (generated from /server at build time)
+/api/
+
+# UI build output (built inside /ui)
+/ui/dist/
+
 # Misc
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+
+# Pipeline outputs
+/transcripts/
+/claims/
+/results/
 
 # Logs
 npm-debug.log*
@@ -40,3 +51,5 @@ __pycache__/
 env/
 venv/
 ENV/
+.vercel
+.env*.local
