--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "build": "npm run sync:api && npm --prefix ui install && npm --prefix ui run build",
     "preview": "npm --prefix ui run preview"
   },
-  "dependencies": {},
+  "dependencies": {
+    "fastify": "^4.26.2",
+    "@fastify/swagger": "^8.15.0"
+  },
   "devDependencies": {
+    "@types/node": "^20.11.30",
     "typescript": "^5.3.3"
   }
 }
