--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "preview": "npm --prefix ui run preview"
   },
   "dependencies": {
-    "fastify": "^4.26.2",
-    "@fastify/swagger": "^8.15.0"
+    "@fastify/swagger": "^8.15.0",
+    "@vercel/node": "^5.6.0",
+    "dotenv": "^17.2.4",
+    "fastify": "^4.26.2"
   },
   "devDependencies": {
     "@types/node": "^20.11.30",
