Fix vercel.json to properly detect API serverless functions

--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,8 @@
 {
-  "framework": "vite",
-  "installCommand": "npm --prefix ui install",
-  "devCommand": "npm run sync:api && npm --prefix ui run dev -- --port $PORT",
   "buildCommand": "npm run build",
   "outputDirectory": "ui/dist",
+  "installCommand": "npm install && npm --prefix ui install",
   "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api/$1" },
-    { "source": "/(.*)", "destination": "/index.html" }
+    { "source": "/((?!api).*)", "destination": "/index.html" }
   ]
 }
