Fix vercel dev command to run vite from ui directory
- Added dev script to package.json
- Updated vercel.json with devCommand
- Fixes 'vite: command not found' error

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "buildCommand": "npm run build",
+  "devCommand": "npm run dev",
   "outputDirectory": "ui/dist",
   "installCommand": "npm install && npm --prefix ui install",
   "rewrites": [
