--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "install": "npm --prefix ui install",
+    "dev": "npm --prefix ui run dev",
     "build": "npm --prefix ui run build"
   }
 }
