--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "install": "npm --prefix ui install",
     "dev": "npm --prefix ui run dev",
     "build": "npm --prefix ui run build"
+  },
+  "devDependencies": {
+    "vite": "^7.3.1"
   }
 }
