Add automatic cache prefetch on server startup
- Created prefetch-on-start.js script
- Automatically calls /api/companies/prefetch after server starts
- Added npm scripts: prefetch and dev:with-cache
- Waits 3 seconds for server to be ready before prefetching
- Logs prefetch status (success/cached/failed counts)
- Makes local development faster with pre-populated cache

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "install": "npm --prefix ui install",
     "dev": "npm --prefix ui run dev",
-    "build": "npm --prefix ui run build"
+    "build": "npm --prefix ui run build",
+    "prefetch": "node scripts/prefetch-on-start.js",
+    "dev:with-cache": "npm run dev & sleep 3 && npm run prefetch"
   },
   "devDependencies": {
     "vite": "^7.3.1"
