Add mock data fallback system for UI
- Created mockTranscripts.js with sample data for AAPL, NVDA, MSFT
- Added fallback to mock companies when API fails
- Added fallback to mock claims and transcripts when analysis fails
- Updated SinglePageVerifier to use mock data gracefully
- Added visual indicator when using sample data
- Updated ClaimExplorer with mock data fallbacks
- Ensures UI works even when backend/API is unavailable

--- a/package.json
+++ b/package.json
@@ -8,9 +8,16 @@
     "dev": "npm --prefix ui run dev",
     "build": "npm --prefix ui run build",
     "prefetch": "node scripts/prefetch-on-start.js",
-    "dev:with-cache": "npm run dev & sleep 3 && npm run prefetch"
+    "dev:with-cache": "npm run dev & sleep 3 && npm run prefetch",
+    "api": "node api/server.js"
   },
   "devDependencies": {
     "vite": "^7.3.1"
+  },
+  "dependencies": {
+    "@fastify/swagger": "^9.7.0",
+    "axios": "^1.13.5",
+    "cheerio": "^1.2.0",
+    "fastify": "^5.7.4"
   }
 }
