Separate heavy aggregation into worker process - light server start
Architecture Change:
  Before: Server blocks 90+s on startup doing SEC API calls + transcript scraping
  After:  Server starts in <1s, spawns worker.js as separate child process

New Files:
- api/worker.js: Standalone process that does all heavy work
  - Fetches SEC data, scrapes transcripts, builds aggregate cache
  - Writes to shared .cache/ files that server reads from
  - Supports --watch flag for continuous mode (re-runs every 30 min)
  - Sends IPC message to parent on completion
  - Can also be run standalone: npm run worker

Updated Files:
- api/_lib/cache/CacheRefresher.js: Now spawns worker via child_process.fork()
  - No longer does any heavy work in-process
  - Spawns worker on init if cache empty/expired
  - Periodic check every 30 min, re-spawns worker if needed
  - Reloads cache from disk after worker completes
- api/_lib/cache/AggregateCache.js: Added reload() method
  - Server calls reload() to pick up data written by worker
- api/_lib/init.js: Now fully synchronous, non-blocking
  - Just loads existing cache files + spawns worker
  - Server accepts requests immediately

Flow:
  Server start (instant) -> load .cache/ from disk -> spawn worker.js
  Worker (separate pid) -> SEC API + scraping -> writes .cache/ -> exits
  Server -> detects worker done -> reload() from disk -> serve fresh data
  Every 30 min -> check if expired -> re-spawn worker if needed

npm scripts:
  npm run api          - Start server (light, instant)
  npm run worker       - Run aggregation once (one-shot)
  npm run worker:watch - Run aggregation + re-check every 30 min

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build": "npm --prefix ui run build",
     "prefetch": "node scripts/prefetch-on-start.js",
     "dev:with-cache": "npm run dev & sleep 3 && npm run prefetch",
-    "api": "node api/server.js"
+    "api": "node api/server.js",
+    "worker": "node api/worker.js",
+    "worker:watch": "node api/worker.js --watch"
   },
   "devDependencies": {
     "vite": "^7.3.1"
