Fix Vercel 12-function limit: consolidate into single catch-all
- Moved server.js and worker.js to bin/ (not serverless functions)
- Deleted 15 individual route handler files from api/
- Created single api/[[...path]].js catch-all that routes through Fastify
- Updated vercel.json to rewrite /api/* to catch-all
- Updated CacheRefresher worker path to bin/worker.js
- Updated package.json scripts to bin/server.js and bin/worker.js
- Result: 1 serverless function (was 16), well under Hobby plan limit

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
   "buildCommand": "npm run build",
-  "devCommand": "npm run dev",
   "outputDirectory": "ui/dist",
   "installCommand": "npm install && npm --prefix ui install",
   "rewrites": [
+    { "source": "/api/(.*)", "destination": "/api" },
     { "source": "/((?!api).*)", "destination": "/index.html" }
   ]
 }
