Disable Vercel auto-deploy to avoid hitting daily limit

--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,9 @@
   "buildCommand": "npm run build",
   "outputDirectory": "ui/dist",
   "installCommand": "npm install && npm --prefix ui install",
+  "git": {
+    "deploymentEnabled": false
+  },
   "rewrites": [
     { "source": "/api/(.*)", "destination": "/api" },
     { "source": "/((?!api).*)", "destination": "/index.html" }
