--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "install": "npm --prefix ui install",
     "dev": "npm --prefix ui run dev",
-    "build": "npm run sync:api && npm --prefix ui run build",
+    "build": "npm run build-cache && npm run sync:api && npm --prefix ui run build",
+    "build-cache": "node scripts/build-cache.js",
     "sync:api": "node scripts/sync-api.mjs",
     "prefetch": "node scripts/prefetch-on-start.js",
     "dev:with-cache": "npm run dev & sleep 3 && npm run prefetch",
